# uts

./: .editorconfig  .env  .env.test  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.rust  LICENSE-AGPL  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  eslint.config.js  foundry.toml  go.mod  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remappings.txt  tsconfig.json
crates/beacon-injector/: Cargo.toml  config.toml
crates/beacon-injector/src/: config.rs  main.rs
crates/bmt/: Cargo.toml
crates/bmt/benches/: tree_construction.rs
crates/bmt/src/: lib.rs
crates/calendar/: Cargo.toml  config.toml
crates/calendar/benches/: submit_digest.rs
crates/calendar/src/: config.rs  index.html  lib.rs  main.rs  routes.rs  time.rs
crates/calendar/src/routes/: headers.rs  ots.rs  responses.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: client.rs  commands.rs  main.rs
crates/cli/src/commands/: inspect.rs  purge.rs  stamp.rs  upgrade.rs  verify.rs
crates/contracts/: Cargo.toml
crates/contracts/abi/: ERC1967Proxy.json  IUniversalTimestamps.json  UniversalTimestamps.json
crates/contracts/src/: eas.rs  fee_oracle.rs  gateway.rs  lib.rs  manager.rs  provider_helper.rs
crates/core/: Cargo.toml  README.md
crates/core-wasm/: Cargo.toml
crates/core-wasm/src/: lib.rs
crates/core/src/: codec.rs  error.rs  fixtures.rs  lib.rs  tracing.rs  utils.rs  verifier.rs
crates/core/src/codec/: imp.rs  primitives.rs  proof.rs  v1.rs
crates/core/src/utils/: hash.rs  sync.rs
crates/core/src/verifier/: bitcoin.rs  eas.rs  ethereum_uts.rs
crates/database/db/: Cargo.toml
crates/database/db/src/: lib.rs  types.rs
crates/database/migration/: Cargo.toml
crates/database/migration/src/: lib.rs  m20220101_000001_create_attestation_table.rs
crates/ffi-binding/: Cargo.toml
crates/ffi-binding/src/: error.rs  lib.rs  primitives.rs
crates/ffi-binding/src/codec/: v1.rs
crates/journal/: Cargo.toml  README.md
crates/journal-rocks/: Cargo.toml
crates/journal-rocks/src/: helper.rs  lib.rs  reader.rs
crates/journal/src/: checkpoint.rs  error.rs  lib.rs  reader.rs  wal.rs
crates/journal/wal/: 000000000000.wal
crates/mmr/: Cargo.toml
crates/mmr/src/: lib.rs
crates/relayer/: Cargo.toml  config.toml
crates/relayer/.sqlx/: query-0138ce9992340d06256843c2292a0f2317202a0a3b1cfb52d5a0a4ba86aeb1ef.json  query-056fa0e19151915971d355c3233079ba8c40e71daf0e7e0de578bfc6a5812a51.json  query-07ffab279ced5752bf3535f57d510b934052bd0d7eaa7fc0050ab44cd4f1099c.json  query-08540c9521786361d7b5957079ac3a993f0a393fe017dee526ef8b2a23e7bb7f.json  query-0d0d2ef416a8f8ff4375465ccf7e4e84764dbd9a62fb81615b7adf8b1bb3c3a7.json  query-158542f76f97e59891337373d52948cf757e95cf05319b6592e5e4d9eac7a822.json  query-25ef4786ec076cd2ad773442169639666f9a6db7681ba1ff51d4bf74183bea45.json  query-29e16caa9d112a70d7854da7a3eea6da0af8542596c2dea77e9e6cf63e86596e.json  query-2b356a04e85a23ac4fc1e980138929aa699c73aee41c31b9a98f85028463c8a2.json  query-419ced47684dffefe634ed640500a66b859afb5dd47b7d26764c8b7412e18403.json  query-431385c65fad9e61d0cceb06cb5b07466aca845c11b2ca3e23b8b68113237796.json  query-4421a93ad62a7a1ba73a34913a0958ff0206e090db7244e3b352bc3a8587bd5e.json  query-4c83b31037d2789327f5dbdc6b42c5011e09f2bbd317f107fb078510c963c62e.json  query-51354b3d377266583cf45e7afaf72f87ff3efb1fd5a274150d9fd8fce66a4cd5.json  query-5f81a3ea416c03d4704e0b70ca357bf194549d72f988c7fce8473e6f3cf502c7.json  query-67f8ef9871348e781d1ee740768b4e8631b05605414529a3d3c56c45c64a9b69.json  query-693189ef6710fb08b1552c4ca0c56990b91161865a0112bae8007f087798bfad.json  query-787c9b7656116830c1f1c63c94e82120dae486a09ca80bd7d2c0a96d5d390e6a.json  query-85a9fa1d680ce9e346d84a0d32a22e84c1661d46d99cfa5774de4dff356cf405.json  query-8735f150e5b45df4743bfd92e20a36882f0ad7df85e08e100314a29ce214633f.json  query-8bd5749e9b68d07e8a8ae10f75bcb78d194007e9d462c0030461ef61f20b64f0.json  query-a3154aca322524aa441b759f1fd06d5319e38f999b16d23659b0eca2a0525ed8.json  query-b03c1f317f3cdd1ea774359763fc72d9e5c933bdad7e923826e447a03d2987f3.json  query-b0bae6a356c6ed9438b20155b470f932ce9c58dd3f187443cc465b9074d256ff.json  query-bf299edb0d76536088a0f109fa27ea585800bea3e048f157e6a308d88ac66c38.json  query-c51afa7c515a0fe748f75fc072f05552a929304b1da57f28a9347bab75300b27.json  query-d212440f3955c55af0c723154198bdb4c53e933d905577baf2759c4b9a12f896.json  query-e090eb29f1861e95fd74fc12878a825d508e46b374a42c5fdd6d90043038f1f9.json  query-e8fdb00094a7ad83caa03fd3da3b26fc07c9e9907529f37d684e22c7fd18b1aa.json  query-eb05840588e22f9478be2b750c09a20981e7b6b4aa791440b10ce11c0127557f.json  query-ed8ab2be359596c22f4ca369fe7be6360e8bc398ff3ee80ec2add00d646c8a76.json  query-efce26860bb51dd670c6242c3cd59f229f4fe7a4910d9fcc6bec3a3937928da4.json
crates/relayer/migrations/: 20260306051302_indexer.sql  20260307041712_tx_history.sql  20260307073019_stats.sql
crates/relayer/src/: config.rs  index.html  indexer.rs  lib.rs  main.rs  relayer.rs  sql.rs
crates/relayer/src/indexer/: l2.rs
crates/relayer/src/sql/: anchoring_requests.rs  eth.rs  indexer.rs  (+2 more)
crates/sql/: Cargo.toml
crates/sql/src/: alloy.rs  lib.rs  macros.rs
crates/stamper/: Cargo.toml
crates/stamper/.sqlx/: query-10f71d6880933717311b006461b2a4fa2b14bd3f0566b5ff0052b36e5c134958.json  query-285c2e7fa17b5daf195f7f967d9c78c1261f72ff4a8f0cac619942be58259c60.json  query-2e7fbf51720dc5f655ea7e45fc6e7b236b75030807a8fdb6a4f5e32eae008241.json  query-47699945784474239a10b7a1e98f0f5ab837c0a056b8f4188dad920aac0d1dcc.json  query-5a94601de5bc75c94410eb9cdbece19229bffa2f8a871c32062836fb8054543e.json  query-5fe8d835ece42f34ee0cf551cb9bd7e38819dd31587817edaeb5b339a5c7e6b6.json  query-9f7ca218a1cef9bb12c9739eea81deca800d0a7d75d079aaec5f00a6bb14f073.json  query-e04d392a8f4ded8fff0556e14f3f372bbd6eb218020932f772e0dd491bd6ab0a.json  query-fb8e841134910bba073883fc80ec77cc5eefc34757f3149f85b3378158013fb6.json
crates/stamper/migrations/: 20260304064005_init.sql
crates/stamper/src/: kv.rs  lib.rs  sql.rs  tx_sender.rs
(+188 files in other folders)
