[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Akase Haruka <light.tsing@gmail.com>", "Rohit Narurkar <rohit.narurkar@proton.me>"]
edition = "2024"
homepage = "https://github.com/lightsing/uts/"
keywords = [] # TODO: add keywords
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightsing/uts.git"
version = "0.1.0"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unused-qualifications = "warn"

[workspace.lints.clippy]
# some useful lints from pedantic group
assigning-clones = "warn"
cast-lossless = "warn"
elidable-lifetime-names = "warn"
redundant-else = "warn"
single-match-else = "warn"
uninlined-format-args = "warn"
unnecessary-box-returns = "warn"
unnecessary-debug-formatting = "warn"

[workspace.dependencies]
auto_impl = "1.3"
bytes = "1.11"
cfg-if = "1.0"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
compact_str = "0.9"
config = "0.15"
const_format = "0.2"
criterion = { version = "0.8", features = ["html_reports"] }
eyre = "0.6"
hex = "0.4"
paste = "1.0"
regex = "1.12"
serde = "1.0"
serde_with = "3.16"
smallvec = { version = "1.15", features = ["union", "const_generics", "const_new"] }
strum = "0.27"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

digest = "0.11.0-rc.4"
ripemd = "0.2.0-rc.3"
sha1 = "0.11.0-rc.3"
sha2 = "0.11.0-rc.3"
sha3 = "0.11.0-rc.3"
