[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Akase Haruka <light.tsing@gmail.com>", "Rohit Narurkar <rohit.narurkar@proton.me>"]
edition = "2024"
homepage = "https://github.com/lightsing/uts/"
keywords = [] # TODO: add keywords
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightsing/uts.git"
version = "0.1.0-alpha.0"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unused-qualifications = "warn"

[workspace.lints.clippy]
# some useful lints from pedantic group
assigning-clones = "warn"
cast-lossless = "warn"
elidable-lifetime-names = "warn"
redundant-else = "warn"
single-match-else = "warn"
uninlined-format-args = "warn"
unnecessary-box-returns = "warn"
unnecessary-debug-formatting = "warn"

[workspace.dependencies]
alloy = "1"
alloy-chains = "0.2"
alloy-contract = "1.2"
alloy-primitives = "1.5"
alloy-provider = { version = "1.2", default-features = false }
alloy-rpc-types-eth = "1.6"
alloy-signer = "1.1"
alloy-signer-local = "1.1"
alloy-sol-types = "1.5"
auto_impl = "1.3"
axum = { version = "0.8", default-features = false }
axum-extra = "0.12"
bitcode = "0.6"
bump-scope = { version = "1.5", features = ["nightly"] }
bytemuck = "1"
bytes = "1.11"
cfg-if = "1.0"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
compact_str = "0.9"
config = "0.15"
const_format = "0.2"
criterion = { version = "0.8", features = ["html_reports"] }
dyn-clone = "1.0"
eyre = "0.6"
futures = "0.3"
hex = "0.4"
itoa = "1.0"
jiff = "0.2.20"
once_cell = { version = "1.21", default-features = false }
paste = "1.0"
phf = { version = "0.13.1", default-features = false }
rand = "0.10"
regex = "1.12"
reqwest = { version = "0.13", default-features = false }
rocksdb = { version = "0.24", default-features = false, features = ["bindgen-runtime"] }
serde = "1.0"
serde_json = "1.0"
serde_with = "3.16"
sqlx = "0.8"
strum = "0.28"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
tokio-util = "0.7"
toml = "0.9"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"


crypto-common = "0.2.0-rc.5"
digest = "0.11.0-rc.4"
hybrid-array = "0.4.5"
ripemd = "0.2.0-rc.3"
sha1 = "0.11.0-rc.3"
sha2 = "0.11.0-rc.3"
sha3 = "0.11.0-rc.3"

tempfile = "3"
uts-bmt = { version = "=0.1.0-alpha.0", path = "crates/bmt" }
uts-contracts = { version = "=0.1.0-alpha.0", path = "crates/contracts" }
uts-core = { version = "=0.1.0-alpha.0", path = "crates/core" }
uts-journal = { version = "=0.1.0-alpha.0", path = "crates/journal" }
uts-stamper = { version = "=0.1.0-alpha.0", path = "crates/stamper" }

[profile.bench]
codegen-units = 1
lto = "fat"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
