[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "uts-beacon-injector"
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true, default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-rpc-client = { workspace = true }
alloy-signer-local = { workspace = true, features = ["mnemonic"] }
alloy-sol-types = { workspace = true }
config = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true, features = ["rustls", "json"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true, features = ["serde"] }
uts-contracts = { workspace = true, features = ["provider-helper-serde"] }

[lints]
workspace = true
