[package]
authors.workspace = true
description = "Binary Merkle Tree implementation for Universal Timestamps in Rust"
edition.workspace = true
homepage.workspace = true
include = [
  "src/**/*",
  "Cargo.toml",
]
keywords.workspace = true
license.workspace = true
name = "uts-bmt"
repository.workspace = true
version = "0.1.1"

[dependencies]
digest.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
sha2.workspace = true
sha3.workspace = true

[lints]
workspace = true
