[package]
authors.workspace = true
description = "Universal Timestamps Command Line Interface."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "uts-cli"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "uts"
path = "src/main.rs"

[dependencies]
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, default-features = false, features = ["reqwest"] }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
digest = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
jiff = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["http2"] }
ripemd = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
url = { workspace = true }
uts-bmt = { workspace = true }
uts-contracts = { workspace = true }
uts-core = { workspace = true, features = ["std", "eas-verifier", "io-utils"] }

[features]
default = ["reqwest-rustls"]
performance = ["tracing/max_level_info"]
reqwest-default-tls = ["reqwest/default-tls", "alloy-provider/reqwest-default-tls"]
reqwest-native-tls = ["reqwest/native-tls", "alloy-provider/reqwest-native-tls"]
reqwest-native-tls-no-alpn = ["reqwest/native-tls-no-alpn"]
reqwest-native-tls-vendored = ["reqwest/native-tls-vendored"]
reqwest-native-tls-vendored-no-alpn = ["reqwest/native-tls-vendored-no-alpn"]
reqwest-rustls = ["reqwest/rustls", "alloy-provider/reqwest-rustls-tls"]
