[package]
authors.workspace = true
categories = ["command-line-utilities"]
description = "Universal Timestamps Command Line Interface."
edition.workspace = true
homepage.workspace = true
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE-*",
  "README.md",
]
keywords = ["cli", "command-line", "uts", "timestamping"]
license = "MIT OR Apache-2.0"
name = "uts-cli"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "uts"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
digest = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
ripemd = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
url = { workspace = true }
uts-core = { workspace = true }
uts-sdk = { workspace = true, features = ["full"] }

[features]
default = ["reqwest-rustls"]
performance = ["tracing/max_level_info"]

reqwest-default-tls = ["uts-sdk/reqwest-default-tls"]
reqwest-native-tls = ["uts-sdk/reqwest-native-tls"]
reqwest-rustls = ["uts-sdk/reqwest-rustls"]
