[package]
authors.workspace = true
description = "Ethereum Smart Contracts Interfaces for Universal Timestamps Project"
edition.workspace = true
homepage.workspace = true
include = [
  "src/**/*",
  "Cargo.toml",
]
keywords.workspace = true
license.workspace = true
name = "uts-contracts"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
phf = { workspace = true, features = ["std", "macros"] }
