[package]
authors.workspace = true
description = "Ethereum Smart Contracts Interfaces for Universal Timestamps Project"
edition.workspace = true
homepage.workspace = true
include = [
  "src/**/*",
  "Cargo.toml",
]
keywords.workspace = true
license.workspace = true
name = "uts-contracts"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
phf = { workspace = true, features = ["std", "macros"] }
serde = { workspace = true, optional = true }

[features]
provider-helper = ["dep:alloy-transport", "alloy-transport/throttle"]
provider-helper-clap = ["provider-helper", "dep:clap", "clap/derive"]
provider-helper-serde = ["provider-helper", "dep:serde", "serde/derive"]
