[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "uts-core-wasm"
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde-wasm-bindgen = { workspace = true }
uts-core = { workspace = true }
wasm-bindgen = { workspace = true }

[lints]
workspace = true
