[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "uts-core-wasm"
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
uts-core = { workspace = true, features = ["serde"] }
wasm-bindgen = { workspace = true }

[lints]
workspace = true
