[package]
description = "Core types and traits for OpenTimestamps in Rust"
documentation = "https://docs.rs/uts-core/"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "uts-core"
repository.workspace = true
version.workspace = true

[[bin]]
name = "uts-info"
path = "src/bin/uts_info.rs"
required-features = ["std"]

[[bin]]
name = "uts-verifier"
path = "src/bin/uts_verifier.rs"
required-features = ["verifier-bin-deps"]

[dependencies]
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }
auto_impl.workspace = true
bytes = { workspace = true, optional = true }
color-eyre = { workspace = true, optional = true }
digest.workspace = true
eyre = { workspace = true, optional = true }
hex.workspace = true
jiff = { workspace = true, optional = true }
once_cell = { workspace = true, features = ["alloc"] }
paste.workspace = true
ripemd.workspace = true
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uts-contracts = { workspace = true, optional = true }

[features]
bytes = ["dep:bytes"]
default = ["std"]
ethereum-uts-verifier = ["verifier", "dep:alloy-provider", "dep:alloy-rpc-types-eth", "dep:alloy-sol-types", "dep:uts-contracts"]
serde = ["dep:serde", "dep:serde_with", "serde/derive", "serde_with/hex"]
std = []
tracing = ["dep:tracing"]
verifier = []

verifier-bin-deps = [
  "dep:eyre",
  "dep:tokio",
  "dep:color-eyre",
  "dep:jiff",
  "std",
  "ethereum-uts-verifier",
  "tokio/full",
]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
opentimestamps = { git = "https://github.com/opentimestamps/rust-opentimestamps" }
serde_json.workspace = true
