[package]
description = "Core types and traits for Univeral Timestamps in Rust"
documentation = "https://docs.rs/uts-core/"
edition.workspace = true
homepage.workspace = true
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README*",
]
keywords.workspace = true
license.workspace = true
name = "uts-core"
repository.workspace = true
version.workspace = true

[dependencies]
alloy-chains = { workspace = true }
alloy-contract = { workspace = true, optional = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }
auto_impl.workspace = true
bytes = { workspace = true, optional = true }
digest.workspace = true
once_cell = { workspace = true, features = ["alloc"] }
paste.workspace = true
ripemd.workspace = true
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uts-bmt = { workspace = true }
uts-contracts = { workspace = true, optional = true }

[features]
bytes = ["dep:bytes"]
default = ["std"]
eas-verifier = ["verifier", "dep:alloy-provider", "dep:alloy-contract", "dep:alloy-sol-types", "dep:uts-contracts"]
io-utils = ["dep:tokio", "tokio/fs"]
serde = ["dep:serde", "dep:serde_with", "serde/derive", "serde_with/hex"]
std = []
tracing = ["dep:tracing"]
verifier = []

[dev-dependencies]
serde_json.workspace = true
