[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
name = "uts-ffi-binding"
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
alloy-primitives = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uniffi = { workspace = true }
uts-core = { workspace = true }

[lints]
workspace = true
