[package]
authors.workspace = true
description = "RocksDB-backed append-only journal for UTS"
edition.workspace = true
homepage.workspace = true
include = [
  "src/**/*",
  "Cargo.toml",
]
keywords.workspace = true
license.workspace = true
name = "uts-journal"
repository.workspace = true
version = "0.1.0"

[dependencies]
rocksdb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
eyre = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
