[package]
authors.workspace = true
description = "RocksDB-backed append-only journal for UTS"
edition.workspace = true
homepage.workspace = true
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
]
keywords.workspace = true
license = "AGPL-3.0-or-later"
name = "uts-journal"
repository.workspace = true
version = "0.1.1"

[dependencies]
rocksdb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
eyre = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
