[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "uts-relayer"
publish = false
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
alloy-contract = { workspace = true, features = ["pubsub"] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true, default-features = false, features = ["ws"] }
alloy-rpc-client = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-sol-types = { workspace = true }
bytemuck = { workspace = true }
config = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
jiff = { workspace = true }
rocksdb = { workspace = true }
rustls = { workspace = true, optional = true }
serde = { workspace = true }
sha3 = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "migrate"] }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uts-bmt = { workspace = true }
uts-contracts = { workspace = true, features = ["provider-helper-serde"] }
uts-sql = { workspace = true }

[features]
default = ["reqwest-rustls-tls"]

reqwest-rustls-tls = ["rustls", "alloy-provider/reqwest-rustls-tls"]
