[package]
authors.workspace = true
categories = ["database"]
description = "SQLite database helpers for Universal Timestamps Project"
edition.workspace = true
homepage.workspace = true
keywords = ["sql", "sqlx", "uts"]
license = "AGPL-3.0-or-later"
name = "uts-sql"
repository.workspace = true
version.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }

[lints]
workspace = true
