[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "uts-database"
repository.workspace = true
version.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { workspace = true, optional = true }
tokio = { workspace = true }

[lints]
workspace = true

[features]
serde = ["dep:serde", "alloy-primitives/serde"]
